# shootersteind-backend

./: .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile.am  README.md  appveyor.yml  autogen.sh  configure.ac
m4/: ac_doxygen.m4  ax_clang_format.m4  ax_coverage.m4  ax_cpplint.m4  ax_dpkg.m4  ax_red_warn.m4  ax_sanitizer.m4  ax_unittest.m4  boost.m4
make/: check.am  clean.am  coverage.am  docs.am  installcheck-lib.am  phony.am  sanity.am
src/shootersteind/: client.cpp  client.h  config.cpp  config.h  context.h  crow.h  engine.cpp  engine.h  loop.cpp  loop.h  main.cpp  object.h  queue.h
src/shootersteind/actions/: direction.cpp  direction.h  join.cpp  join.h  move.cpp  move.h  shoot.cpp  shoot.h
src/shootersteind/handlers/: game.cpp  game.h  login.cpp  login.h
src/shootersteind/routes/: game.cpp  game.h  login.cpp  login.h  routes.cpp  routes.h
test/: testing.h
test/shootersteind/: crow_test.cpp  queue_test.cpp
